<resources>
    <string name="general_confirm">Confirm</string>
    <string name="general_confirm_exit">Confirm exit</string>
    <string name="general_confirm_exit_msg">Do you really want to exit Slide?</string>
    <string name="general_enable_shadowbox">Shadowbox mode</string>
    <string name="pro_upgrade_msg">Upgrade to Slide for Reddit Pro to enjoy some awesome new features including:\n\n- Ad Blocker and Reader Mode in Website view\n- Crop and draw on images to upload\n- Customizable tablet column mode\n- Automatic night mode\n- Shadowbox and Gallery content views\n- Comment Shadowbox view\n- Backup and restore to Google Drive and to file\n- Supporting open source and ad-free software!\n\nWould you like to support Slide for Reddit?</string>
    <string name="general_pro_msg">I have opted to make a few features of Slide unlockable by purchasing a Pro unlock key from the Play Store. \n\nThis is to keep development going, and in lieu of displaying ads in the free version of Slide!\n\nIncluded in this is multi-column mode, Shadowbox mode (for image subreddits), gallery mode, backup and restore to Google Drive and to file, and drawing/cropping images!\n\nWould you like to unlock Slide for Reddit Pro?</string>
    <string name="general_pro_msg_crop">I have opted to make a few features of Slide (including cropping and drawing on images) unlockable by purchasing a Pro unlock key from the Play Store. \n\nThis is to keep development going, and in lieu of displaying ads in the free version of Slide!\n\nIncluded in this is multi-column mode, Shadowbox mode (for image subreddits), gallery mode, backup and restore to Google Drive and to file, and more!\n\nWould you like to unlock Slide for Reddit Pro?</string>
    <string name="general_open_settings">Sidebar</string>
    <string name="general_sub_sync">Syncing subscriptions</string>
    <string name="general_gallerymode_ispro">Gallery mode is a Pro feature</string>
    <string name="general_cropdraw_ispro">Crop and Draw on Uploaded Images is a Pro feature</string>
    <string name="general_shadowbox_comments_ispro">Comment Shadowbox mode is a Pro feature</string>
    <string name="general_shadowbox_ispro">Shadowbox mode is a Pro feature</string>
    <string name="general_nighttheme_ispro">Automatic Night Mode is a Pro feature</string>
    <string name="general_backup_ispro">Settings backup is a Pro feature</string>
    <string name="submission_info_unsaved">Submission unsaved</string>
    <string name="submission_info_saved">Submission saved</string>
    <string name="submission_info_cached">Submission cached</string>
    <string name="submission_info_archived">This is an archived post. You won\'t be able to vote or comment.</string>
    <string name="submission_post_saved">Post saved</string>
    <string name="submission_info_hidden">Post hidden forever</string>
    <string name="submission_stickied">Pinned</string>
    <string name="submission_link_extern">Open externally</string>
    <string name="submission_link_copy">Copy URL</string>
    <string name="submission_link_share">Share URL</string>
    <string name="submission_share_title">Which link would you like to share?</string>
    <string name="submission_share_reddit">Reddit URL</string>
    <string name="submission_share_content">Content URL</string>
    <string name="submission_hide">Hide post</string>
    <string name="submission_report">Report post</string>
    <string name="submission_gild">Open in browser</string>
    <string name="submission_save">Save post</string>
    <string name="submission_save_image">Save image</string>
    <string name="submission_load_full">Load full thread</string>
    <string name="submission_np_link">This is a no participation link. Please don\'t vote or comment.</string>
    <string name="submission_tap_gif">Tap to load GIF</string>
    <string name="submission_not_found">Uh oh, post not found!</string>
    <string name="submission_not_found_msg">Sorry, this post could not be found</string>
    <string name="submission_copy_text">Copy text</string>
    <string name="submission_comment_saved">Comment saved</string>
    <string name="submission_comment_unsaved">Comment un-saved</string>
    <string name="submission_share_permalink">Share link</string>
    <string name="submission_comment_copied">Comment text copied</string>
    <string name="submission_text_copied">Submission text copied</string>
    <string name="submission_nocontent">Submission has no content</string>
    <string name="submission_link_copied">Link copied</string>
    <string name="submission_removed">Submission removed</string>
    <plurals name="submission_points">
        <item quantity="one">%d point</item>
        <item quantity="other">%d points</item>
    </plurals>
    <plurals name="new_messages">
        <item quantity="one">%d new message</item>
        <item quantity="other">%d new messages</item>
    </plurals>
    <plurals name="points">
        <item quantity="one">pt</item>
        <item quantity="other">pts</item>
    </plurals>
    <plurals name="comments">
        <item quantity="one">cmt</item>
        <item quantity="other">cmts</item>
    </plurals>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_black">AMOLED black</string>
    <string name="theme_dark_blue">Dark blue</string>
    <string name="night_mode">Night Mode</string>
    <string name="disabled">Disabled</string>
    <string name="manual">Manual</string>
    <string name="automatic">Automatic</string>
    <string name="theme_default_color">Primary color</string>
    <string name="theme_subreddit_color">Change color</string>
    <string name="theme_accent_color">Accent color</string>
    <string name="theme_base">Base theme</string>
    <string name="theme_card">Card</string>
    <string name="theme_sepia">Sepia</string>
    <string name="theme_amoled_contrast">AMOLED with contrast</string>
    <string name="theme_night">Night theme</string>
    <string name="font_size_comment">Comment font size</string>
    <string name="font_size_post">Post font size</string>
    <string name="font_size_huge">Huge</string>
    <string name="font_size_larger">Larger</string>
    <string name="font_size_large">Large</string>
    <string name="font_size_medium">Medium</string>
    <string name="font_size_small">Small</string>
    <string name="font_size_smaller">Smaller</string>
    <string name="font_size_tiny">Tiny</string>
    <string name="card_hide_post_button">“Hide post” button in actionbar</string>
    <string name="card_tint_outside">Only tint outside the subreddit</string>
    <string name="card_save_button">“Save post” button in actionbar</string>
    <string name="multi_column_title">Multi-column</string>
    <string name="multi_column_landscape">Landscape</string>
    <string name="multi_column_portrait">Dual columns in portrait mode</string>
    <string name="single_column_multi_window">Single column in multi-window mode</string>
    <string name="drawer_profile">You</string>
    <string name="drawer_support">Go Pro</string>
    <string name="drawer_goto_profile">Go to profile</string>
    <string name="drawer_add_account">Add an account</string>
    <string name="drawer_hello">Hello,</string>
    <string name="drawer_search">Go to subreddit</string>
    <string name="drawer_moderation">Moderation</string>
    <string name="drawer_offline">Slide is in offline mode</string>
    <string name="drawer_offline_retry">Try to enter online mode</string>
    <string name="drawer_guest_mode">Browse as guest</string>
    <string name="sidebar_wiki">Subreddit wiki</string>
    <string name="sidebar_mods">Subreddit moderators</string>
    <string name="profile_karma_total">Total karma</string>
    <string name="profile_karma_link">Post karma</string>
    <string name="profile_karma_comment">Comment karma</string>
    <string name="profile_message">Private message</string>
    <string name="profile_saved">Saved</string>
    <string name="profile_read_later">Read Later</string>
    <string name="profile_upvoted">Upvoted</string>
    <string name="profile_err_title">User not found</string>
    <string name="profile_err_msg">Reddit user could not be retrieved</string>
    <string name="profile_overview">Overview</string>
    <string name="profile_comments">Comments</string>
    <string name="profile_submitted">Submitted</string>
    <string name="profile_gilded">Gilded</string>
    <string name="profile_downvoted">Downvoted</string>
    <string name="profile_hidden">Hidden</string>
    <string name="profile_friend">Friend</string>
    <string name="profile_add_friend">Add friend</string>
    <string name="profile_remove_friend">Remove friend</string>
    <string name="profile_manage_accounts">Manage accounts</string>
    <string name="sorting_change_sorting">Sort mode</string>
    <string name="editor_title">Title</string>
    <string name="btn_save">Save</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_refresh">Refresh</string>
    <string name="toolbox_removal_header">Include header:</string>
    <string name="toolbox_removal_footer">Include footer:</string>
    <string name="toolbox_removal_comment">Reply with a comment to the item that is removed</string>
    <string name="toolbox_removal_sticky">Sticky the removal comment</string>
    <string name="toolbox_removal_pm">Send as PM</string>
    <string name="toolbox_removal_modmail">Send PM as modmail</string>
    <string name="toolbox_removal_both">Send as both PM and reply</string>
    <string name="toolbox_removal_none">None, only log the removal</string>
    <string name="toolbox_removal_lock">Lock the removed thread</string>
    <string name="toolbox_logreason_placeholder">Log reason</string>
    <string name="search_title">Search</string>
    <string name="settings_synccit_remove">DISCONNECT SYNCCIT</string>
    <string name="settings_synccit_auth">Auth code</string>
    <string name="settings_synccit_username">Username</string>
    <string name="settings_description_synccit">Synccit allows you to sync your submission history between devices and your browser</string>
    <string name="alphabetize_subreddits">Alphabetize subreddits</string>
    <string name="sync_subscriptions">Sync subscriptions</string>
    <string name="title_create_multi">Create a multireddit</string>
    <string name="website_external">Open in external browser</string>
    <string name="internal_browser_storecookies">Store website cookies</string>
    <string name="internal_browser_readermode">Reader mode</string>
    <string name="comment_shadowbox">Comment shadowbox</string>
    <string name="report_loading">Loading reasons…</string>
    <string name="report_another_reason">Another Reason</string>
    <string name="report_other">Other</string>
    <string name="input_reason_for_report">Reason for reporting</string>
    <string name="subreddit_theme">Subreddit theme</string>
    <string name="sub_content_filter">Subreddit content filter</string>
    <string name="btn_collapse_children_all">Collapse child comments</string>
    <string name="btn_open_content">Open content</string>
    <string name="btn_open_comments">Open comments</string>
    <string name="album_slide_view">Sliding album view</string>
    <string name="album_grid">Album grid</string>
    <string name="open_externally">Open externally</string>
    <string name="vertical_album_view">Vertical album view</string>
    <string name="download_album">Download album</string>
    <string name="help">Help</string>
    <string name="view_subreddits">View subreddits</string>
    <string name="open_links_externally">Always open this host externally</string>
    <string name="hide_read_posts">Hide read posts</string>
    <string name="gallery_mode">Gallery mode</string>
    <string name="view_sub_sidebar">View sub sidebar</string>
</resources>