<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".SubredditOverview">

    <item
            android:id="@+id/search"
            android:icon="@drawable/search"
            android:title="@string/search_title"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/sort"
            android:icon="@drawable/sort"
            android:title="@string/sorting_change_sorting"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/reload"
            android:icon="@drawable/refresh"
            android:title="@string/btn_refresh"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/shadowbox"
            android:icon="@drawable/shadowbox"
            android:title="@string/comment_shadowbox"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/related"
            android:icon="@drawable/world"
            android:title="Related submissions"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/sidebar"
            android:icon="@drawable/info"
            android:title="@string/view_sub_sidebar"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/content"
            android:icon="@drawable/link"
            android:title="@string/btn_open_content"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/collapse"
            android:title="@string/btn_collapse_children_all"
            app:showAsAction="never"/>
</menu>
