<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SubredditOverview">

    <item android:id="@+id/action_shadowbox"
        android:icon="@drawable/shadowbox"
        android:title="@string/general_enable_shadowbox"
        app:showAsAction="always"/>


    <item android:id="@+id/action_info"
        android:icon="@drawable/infonew"
        android:title="@string/general_open_settings"
        android:enabled="false"
 />


    <item android:id="@+id/action_sort"
        android:icon="@drawable/sort"
        android:title="@string/sorting_change_sorting"
        app:showAsAction="always"/>

    <item android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/btn_refresh"
        app:showAsAction="always"/>

</menu>
