<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="8dp"
    android:paddingLeft="8dp"
    android:paddingEnd="8dp"
    android:paddingRight="8dp">

    <LinearLayout
        android:id="@+id/report_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ProgressBar
            android:layout_width="32dp"
            android:layout_height="32dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="4dp"
            android:text="@string/report_loading" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/report_reasons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_another_reason" />

        <RadioButton
            android:id="@+id/report_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/report_other" />
    </RadioGroup>

    <EditText
        android:id="@+id/input_report_reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:completionThreshold="0"
        android:hint="@string/input_reason_for_report"
        android:inputType="text|textCapSentences|textAutoCorrect|textAutoComplete" />
</LinearLayout>
