<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/toolbox_header_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:paddingEnd="8dp"
                android:paddingRight="8dp"
                android:text="@string/toolbox_removal_header"
                android:textColor="?attr/fontColor" />

            <TextView
                android:id="@+id/toolbox_header_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/toolbox_header_toggle"
                android:layout_toEndOf="@id/toolbox_header_toggle"
                android:layout_toRightOf="@id/toolbox_header_toggle"
                android:ellipsize="end"
                android:maxLines="2"
                android:paddingEnd="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="4dp"
                android:text="Your submission has been removed for the following reason(s):" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.25dp"
            android:background="?attr/tintColor" />

        <LinearLayout
            android:id="@+id/toolbox_reasons_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:choiceMode="multipleChoice"
            android:orientation="vertical" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.25dp"
                android:background="?attr/tintColor" />

            <CheckBox
                android:id="@+id/toolbox_footer_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:paddingEnd="8dp"
                android:paddingRight="8dp"
                android:text="@string/toolbox_removal_footer"
                android:textColor="?attr/fontColor" />

            <TextView
                android:id="@+id/toolbox_footer_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/toolbox_footer_toggle"
                android:layout_toEndOf="@id/toolbox_footer_toggle"
                android:layout_toRightOf="@id/toolbox_footer_toggle"
                android:ellipsize="end"
                android:maxLines="2"
                android:paddingEnd="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="4dp"
                android:text="Please message the moderators with any concerns." />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.25dp"
            android:layout_marginBottom="8dp"
            android:background="?attr/tintColor" />

        <RadioGroup
            android:id="@+id/toolbox_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/toolbox_removal_comment"
                android:textColor="?attr/fontColor" />

            <CheckBox
                android:id="@+id/sticky_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:text="@string/toolbox_removal_sticky"
                android:textColor="?attr/fontColor" />

            <RadioButton
                android:id="@+id/pm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/toolbox_removal_pm"
                android:textColor="?attr/fontColor" />

            <CheckBox
                android:id="@+id/pm_modmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:text="@string/toolbox_removal_modmail"
                android:textColor="?attr/fontColor" />

            <RadioButton
                android:id="@+id/both"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/toolbox_removal_both"
                android:textColor="?attr/fontColor" />

            <RadioButton
                android:id="@+id/none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/toolbox_removal_none"
                android:textColor="?attr/fontColor"
                android:visibility="gone" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/lock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toolbox_removal_lock"
            android:textColor="?attr/fontColor" />

        <EditText
            android:id="@+id/toolbox_log_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/toolbox_logreason_placeholder"
            android:importantForAutofill="no"
            android:inputType="text"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>
